# libipldr

./: .Rbuildignore  .gitignore  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  cleanup  configure  cran-comments.md  lab.r  libipldr.Rproj
R/: extendr-wrappers.R  r-wrappers.r
inst/: AUTHORS  WORDLIST
inst/extdata/: sample.car
man/: decode_car.Rd  decode_cid.Rd  decode_dag_cbor.Rd  decode_dag_cbor_multi.Rd  libipldr-package.Rd  print.car_file.Rd  print.cid.Rd
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c  libipldr-win.def
src/rust/: Cargo.toml  vendor.tar.xz
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-decode.R
