[package]
name = 'libipldr'
version = '0.1.0'
edition = '2021'
license = "MIT"
description = "R binding to the Rust IPLD library"
authors = ["Johannes B. Gruber <johannesb.gruber@gmail.com>"]

[lib]
crate-type = [ 'staticlib' ]
name = 'libipldr'

[dependencies]
extendr-api = '*'
libipld = { version = "0.16.0", features = ["dag-cbor", "dag-json", "dag-pb", "derive"] }
pyo3 = { version = "0.19", features = ["anyhow"] }
anyhow = "1.0.75"
futures = "0.3"
iroh-car = "0.4.0"

